# moviereviews

./: README.MD  db.sqlite3  manage.py  pyproject.toml  requirements.txt
movie/: models.py  views.py
movie/migrations/: 0001_initial.py
movie/templates/: home.html  signup.html
moviereviews/: asgi.py  settings.py  urls.py  wsgi.py
moviereviews/templates/: base.html
news/: views.py
news/migrations/: 0001_initial.py
news/templates/: news.html
