[tool.poetry]
name = "moviereviews"
version = "0.1.0"
description = ""
authors = ["Abraham Paniagua <abraham.paniagua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^9.5.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
